# adrastea

./: .gitignore  Cargo.toml  README.md  WORKSPACE  proxy.js
adrastea/: Cargo.toml
adrastea/src/: audio.rs  clip.rs  kernels.rs  llama.rs  llava.rs  main.rs  mathpix.rs  mel.rs  pickle.rs  rt_alloc.rs  stft.rs  tensor.rs  util.rs  vulkan.rs  wayland.rs  whisper.rs
adrastea_core/: Cargo.toml
adrastea_core/src/: lib.rs  mel.rs  net.rs  stft.rs  util.rs
adrastea_kernels/: .clangd  Cargo.toml  build.rs
adrastea_kernels/cpp/: compat.h  conv1d.cu  convert.cu  elementwise.cu  embed.cu  embed_uint8.cu  error_stats.cu  layer_norm.cu  linear.cu  matmul.cu  matmul_nt.cu  matmul_nt_128x64x64.cu  matmul_nt_fp16u8.cu  matmul_nt_wmma_128x64x64.cu  matmul_nt_wmma_16x128x256.cu  matmul_nt_wmma_16x128x256_fp16u8.cu  matmul_qk.cu  matmul_qkv.cu  microbench.cu  normalize.cu  quantize.cu  rms_norm.cu  rotary.cu  silu.cu  softmax_rows.cu  square_fp32_16x16.cu
adrastea_kernels/src/: lib.rs
adrastea_media/: Cargo.toml
adrastea_media/src/: audio.rs  lib.rs  vulkan.rs  wayland.rs  wayland_protocol.rs
adrastea_models/: Cargo.toml
adrastea_models/src/: clip.rs  kernels.rs  lib.rs  llama.rs  tensor.rs  whisper.rs
py/: requirements.txt
py/gen_tests/: BUILD  gen_tests.py
py/triton/: build.py  matmul.py  square.py
py/triton/arch/cuda/80/: matmul_fp16_128x128x32_8_4_4.ptx  matmul_fp16_128x256x64_8_3_8.cubin  matmul_fp16_128x256x64_8_3_8.json  matmul_fp16_128x256x64_8_3_8.ptx  matmul_fp16_128x32x32_8_4_4.ptx  matmul_fp16_128x64x32_8_4_4.cubin  matmul_fp16_128x64x32_8_4_4.json  matmul_fp16_128x64x32_8_4_4.ptx  matmul_fp16_32x64x32_8_5_2.ptx  matmul_fp16_64x128x32_8_4_4.json  matmul_fp16_64x128x32_8_4_4.ptx  matmul_fp16_64x256x32_8_4_4.cubin  matmul_fp16_64x256x32_8_4_4.json  matmul_fp16_64x256x32_8_4_4.ptx  matmul_fp16_64x32x32_8_5_2.json  matmul_fp16_64x32x32_8_5_2.ptx  square_fp32_16x16.json
py/triton/arch/cuda/89/: matmul_fp16_128x128x32_8_4_4.cubin  matmul_fp16_128x128x32_8_4_4.json  matmul_fp16_128x256x64_8_3_8.cubin  matmul_fp16_128x256x64_8_3_8.ptx  matmul_fp16_128x64x32_8_4_4.cubin  matmul_fp16_32x64x32_8_5_2.cubin  matmul_fp16_64x128x32_8_4_4.cubin
shaders/: square.comp.glsl  square.comp.spv
src/: main.rs
triton/: 0001-split-compilation-from-module-loading.patch  build.py  square.py
triton/arch/cuda/80/: matmul_fp16_128x128x32_8_4_4.cubin  matmul_fp16_128x128x32_8_4_4.json  matmul_fp16_128x128x32_8_4_4.ptx  matmul_fp16_128x256x64_8_3_8.cubin  matmul_fp16_128x256x64_8_3_8.json  matmul_fp16_128x256x64_8_3_8.ptx  matmul_fp16_128x32x32_8_4_4.cubin  matmul_fp16_128x32x32_8_4_4.json  matmul_fp16_128x32x32_8_4_4.ptx  matmul_fp16_128x64x32_8_4_4.cubin  matmul_fp16_128x64x32_8_4_4.json  matmul_fp16_128x64x32_8_4_4.ptx  matmul_fp16_32x64x32_8_5_2.cubin  matmul_fp16_32x64x32_8_5_2.json  matmul_fp16_32x64x32_8_5_2.ptx  matmul_fp16_64x128x32_8_4_4.cubin  matmul_fp16_64x128x32_8_4_4.json  matmul_fp16_64x128x32_8_4_4.ptx  matmul_fp16_64x256x32_8_4_4.cubin  matmul_fp16_64x256x32_8_4_4.json  matmul_fp16_64x256x32_8_4_4.ptx  matmul_fp16_64x32x32_8_5_2.cubin  matmul_fp16_64x32x32_8_5_2.json  matmul_fp16_64x32x32_8_5_2.ptx  square_fp32_16x16.cubin  square_fp32_16x16.json  square_fp32_16x16.ptx
triton/arch/cuda/89/: matmul_fp16_128x128x32_8_4_4.ptx  matmul_fp16_128x32x32_8_4_4.cubin  matmul_fp16_128x32x32_8_4_4.json  matmul_fp16_128x32x32_8_4_4.ptx  matmul_fp16_128x64x32_8_4_4.ptx  matmul_fp16_32x64x32_8_5_2.json  matmul_fp16_32x64x32_8_5_2.ptx  matmul_fp16_64x128x32_8_4_4.ptx  matmul_fp16_64x256x32_8_4_4.cubin  matmul_fp16_64x256x32_8_4_4.ptx  matmul_fp16_64x32x32_8_5_2.cubin  matmul_fp16_64x32x32_8_5_2.ptx  square_fp32_16x16.cubin  square_fp32_16x16.ptx
