[workspace]

members = ["adrastea", "adrastea_kernels"]

[patch.crates-io]
serde-pickle = { git = "https://github.com/eiz/serde-pickle", branch = "mack/persid" }
half = { git = "https://github.com/eiz/half-rs", branch = "mack/format-options-2.2.1" }

[profile.release-lto]
inherits = "release"
lto = true
panic = "abort"
strip = true
