[workspace]
members = [
    "adrastea",
    "adrastea_core",
    "adrastea_kernels",
    "adrastea_media",
    "adrastea_models",
]
resolver = "2"

[patch.crates-io]
serde-pickle = { git = "https://github.com/eiz/serde-pickle", branch = "mack/persid" }
tiktoken-rs = { git = "https://github.com/eiz/tiktoken-rs", branch = "mack/whisper" }
pipewire = { git = "https://github.com/eiz/pipewire-rs", branch = "mack/public-raw-ctx" }
pipewire-sys = { git = "https://github.com/eiz/pipewire-rs", branch = "mack/public-raw-ctx" }
libspa-sys = { git = "https://github.com/eiz/pipewire-rs", branch = "mack/public-raw-ctx" }

[profile.release-lto]
inherits = "release"
lto = true
panic = "abort"
strip = true
