[package]
name = "adrastea"
version = "0.1.0"
edition = "2021"
authors = ["Adrastea Authors <adrastea@str.rs>"]
description = "Software 3.11 for Workgroups"
license = "AGPL-3.0-only"

[features]
hip = ["adrastea_kernels/hip"]

[dependencies]
adrastea_kernels = { path = "../adrastea_kernels" }

allocator-api2 = "0.2.14"
anyhow = "1.0.71"
ash = { version = "0.37.2", features = ["loaded"] }
atspi = { version = "0.17.0", default-features = false, features = ["tokio"] }
bstr = "1.5.0"
byteorder = "1.4.3"
clap = { version = "4.3.10", features = ["derive"] }
cstr = "0.2.11"
half = "2"
libc = "0.2.146"
libspa-sys = "0.6.0"
matrixmultiply = { version = "0.3.7", features = ["threading"] }
memmap2 = "0.6.1"
num-traits = "0.2.15"
parking_lot = "0.12.1"
pipewire = "0.6.0"
pipewire-sys = "0.6.0"
regex = "1.8.4"
rustfft = "6.1.0"
sentencepiece = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-pickle = "1.1.1"
simt = "0.2.3"
simt_core = "0.2"
simt_cuda = "0.2.2"
simt_cuda_sys = "0.2"
simt_hip = "0.2"
simt_hip_sys = "0.2"
simt_rocblas_sys = "0.2"
skia-bindings = "0.63.0"
skia-safe = "0.63.0"
smallvec = "1.10.0"
tiktoken-rs = "0.4.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
wav = "1.0.0"
wayland-client = "0.30.2"
wayland-server = "0.30.1"
wayland-protocols = { version = "0.30.0", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
zip = { version = "0.6.6", default-features = false, features = [] }
async-recursion = "1.0.4"
reqwest = "0.11.18"

[target.'cfg(windows)'.dependencies]
windows = "0.48.0"
