[package]
name = "adrastea"
version = "0.1.0"
edition = "2021"
authors = ["Adrastea Authors <adrastea@str.rs>"]
description = "Software 3.11 for Workgroups"
license = "AGPL-3.0-only"

[features]
hip = ["adrastea_kernels/hip"]

[dependencies]
adrastea_core = { path = "../adrastea_core" }
adrastea_kernels = { path = "../adrastea_kernels" }
adrastea_media = { path = "../adrastea_media" }
adrastea_models = { path = "../adrastea_models" }

anyhow = "1.0.71"
async-recursion = "1.0.4"
atspi = { version = "0.17.0", default-features = false, features = ["tokio"] }
clap = { version = "4.3.10", features = ["derive"] }
deno_console = "0.113.0"
deno_core = "0.197.0"
dirs = "5.0.1"
half = "2"
parking_lot = "0.12.1"
reqwest = { version = "0.11.18", features = ["multipart"] }
sentencepiece = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.22"
simt = "0.2.3"
simt_core = "0.2"
simt_cuda = "0.2.2"
simt_cuda_sys = "0.2"
simt_hip = "0.2"
simt_hip_sys = "0.2"
simt_rocblas_sys = "0.2"
skia-bindings = "0.63.0"
skia-safe = "0.63.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
walkdir = "2.3.3"
wav = "1.0.0"

[target.'cfg(windows)'.dependencies]
windows = "0.48.0"
