[package]
name = "adrastea_core"
version = "0.1.0"
edition = "2021"
authors = ["Adrastea Authors <adrastea@str.rs>"]
description = "Software 3.11 for Workgroups"
license = "AGPL-3.0-only"

[dependencies]
allocator-api2 = "0.2.14"
libc = "0.2.146"
matrixmultiply = { version = "0.3.7", features = ["threading"] }
num-traits = "0.2.15"
parking_lot = "0.12.1"
rustfft = "6.1.0"
