[package]
name = "adrastea_media"
version = "0.1.0"
edition = "2021"
authors = ["Adrastea Authors <adrastea@str.rs>"]
description = "Software 3.11 for Workgroups"
license = "AGPL-3.0-only"

[dependencies]
adrastea_core = { path = "../adrastea_core" }
allocator-api2 = "0.2.14"
anyhow = "1"
ash = { version = "0.37.2", features = ["loaded"] }
byteorder = "1.4.3"
cstr = "0.2.11"
libc = "0.2.146"
libspa-sys = "0.6.0"
memmap2 = "0.6.1"
parking_lot = "0.12.1"
pipewire = "0.6.0"
pipewire-sys = "0.6.0"
quick-xml = { version = "0.29.0", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
skia-safe = "0.63.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
wayland-client = "0.30.2"
wayland-server = "0.30.1"
wayland-protocols = { version = "0.30.0", features = [
    "client",
    "server",
    "unstable",
] }
wayland-protocols-wlr = { version = "0.1.0", features = ["client", "server"] }
