[package]
name = "adrastea_models"
version = "0.1.0"
edition = "2021"
authors = ["Adrastea Authors <adrastea@str.rs>"]
description = "Software 3.11 for Workgroups"
license = "AGPL-3.0-only"

[dependencies]
adrastea_core = { path = "../adrastea_core" }
adrastea_kernels = { path = "../adrastea_kernels" }

anyhow = "1.0.71"
bstr = "1.5.0"
byteorder = "1.4.3"
half = "2"
memmap2 = "0.6.1"
parking_lot = "0.12.1"
regex = "1.8.4"
rustfft = "6.1.0"
sentencepiece = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-pickle = "1.1.1"
simt = "0.2.3"
simt_core = "0.2"
simt_cuda = "0.2.2"
simt_cuda_sys = "0.2"
simt_hip = "0.2"
simt_hip_sys = "0.2"
skia-safe = "0.63.0"
smallvec = "1.10.0"
tiktoken-rs = "0.4.2"
zip = { version = "0.6.6", default-features = false, features = [] }
